# legal-agent-service

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
docs/: draft-template-conventions.md
src/legal_agent/: __init__.py  config.py  logging_config.yaml  logging_context.py  main.py  middleware.py
src/legal_agent/agents/: __init__.py  anticipatory_bail_agent.py  application_agent.py  bail_agent.py  base.py  consumer_complaint_agent.py  contract_agent.py  court_filing_agent.py  criminal_appeal_agent.py  execution_petition_agent.py  notice_agent.py  patent_agent.py  quashing_petition_agent.py  revision_petition_agent.py  slp_agent.py  written_arguments_agent.py  written_statement_agent.py
src/legal_agent/agents/drafts/: __init__.py  anticipatory_bail_agent.py  application_agent.py  bail_agent.py  base.py  cause_title.py  cheque_bounce_notice_agent.py  consumer_complaint_agent.py  contract_agent.py  court_filing_agent.py  court_filing_baseline.py  criminal_appeal_agent.py  demand_notice_agent.py  eviction_notice_agent.py  execution_petition_agent.py  first_bail_agent.py  notice_agent.py  notice_baseline.py  patent_agent.py  quashing_petition_agent.py  revision_petition_agent.py  second_bail_agent.py  slp_agent.py  written_arguments_agent.py  written_statement_agent.py
src/legal_agent/agents/translation/: __init__.py  _llm_common.py  css_resolver.py  doc_profiles.py  document_glossary.py  docx_builder.py  generator.py  glossary.py  glossary_en_hi.yaml  glossary_loader.py  hindi_postprocess.py  html_builder.py  html_pdf_translator.py  layout_extract.py  layout_ir.py  layout_render.py  (+15 more)
src/legal_agent/api/: __init__.py  routes.py
src/legal_agent/case_agent/: __init__.py  agent.py  models.py  routes.py  tools.py
src/legal_agent/causelist/: connection.py  db.py  routes.py  scraper.py
src/legal_agent/chat/: __init__.py  agent.py  citation_utils.py  firecrawl_verify.py  legal_web_search_firecrawl.py  models.py  query_classifier.py  routes.py  session_title.py  web_search.py
src/legal_agent/clients/: __init__.py  decryption.py  gcs_client.py  google_search_client.py  rag_client.py  s3_client.py
src/legal_agent/data/: __init__.py  examples.json  examples_loader.py
src/legal_agent/draft_chat/: agent.py  models.py  routes.py  session_store.py
src/legal_agent/judgments/: router.py  summarizer.py
src/legal_agent/legal_retrieval/: __init__.py  config.py  db.py  embeddings.py  langchain_tools.py  query_expansion.py  reranker.py  retriever.py
src/legal_agent/models/: __init__.py  documents.py  rag_models.py  requests.py  responses.py
src/legal_agent/precedents/: __init__.py  generator.py  prompts.py  service.py
src/legal_agent/prompts/: __init__.py  fact_dense_draft.py  legal_assistant_chat.py  query_classifier.py  verify_rewrite.py
src/legal_agent/rag_engine/: config.py
src/legal_agent/research_chat/: agent.py  models.py  routes.py  session_store.py
src/legal_agent/services/: __init__.py  content_preprocessor.py  draft_field_extractor.py  draft_service.py  job_manager.py
src/legal_agent/summary/: generator.py  models.py  routes.py  service.py  store.py
src/legal_agent/synopsis/: __init__.py  generator.py  models.py  service.py
src/legal_agent/utils/: legal_postprocess.py  ocr.py
src/legal_agent/workspace_chat/: agent.py  models.py  routes.py  session_store.py
test_docs/: compare_ocr.py  test_ocr_cache.py
test_docs/notice_inputs/: bail_1st_input.txt  bail_2nd_input.txt  cheque_bounce_input.txt  demand_notice_input.txt  eviction_notice_input.txt  legal_notice_input.txt
tests/: test_cause_title.py  test_safe_filename.py  test_vision_structured_layout.py
(+94 files in other folders)
