[project]
name = "legal-agent-service"
version = "0.1.0"
description = "Legal drafting agent service for Indian legal firms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.2.0",
    # Pinned + sourced to pytorch-cpu index so Linux Docker does not install CUDA wheels (~3GB+).
    "torch>=2.0",
    "sentence-transformers>=3.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "playwright>=1.40.0",
    "camoufox>=0.4.0",
    # rag-engine dependencies
    "qdrant-client>=1.7.0",
    "PyMuPDF>=1.24.5",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "huggingface_hub>=0.20.0",
    "python-multipart>=0.0.18",
    "requests>=2.31.0",
    "cryptography>=42.0",
    "fpdf2>=2.8.0",
    # NumPy 2.x avoids broken/partial 1.26 installs that raise
    # ImportError: cannot import name 'matrix_power' from 'numpy.linalg' (unknown location)
    "numpy>=2.1.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
legal-agent = "legal_agent.main:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Hatchling + uv editable used `_legal_agent_service.pth`; Python 3.11+ skips underscore .pth
# files, so `import legal_agent` broke. Setuptools editable uses .pth names Python applies.
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# link-mode here so uv.toml can be deleted — avoids "index ignored in favor of uv.toml" warning.
[tool.uv]
link-mode = "copy"

# Docker / Railway: default PyPI torch pulls CUDA 12 wheels on Linux (~3GB+ of nvidia-*).
# Direct `torch` dep + pytorch-cpu index forces CPU-only wheels (matches MODEL_DEVICE=cpu).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
